fixing covering page and detailing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -312,13 +312,22 @@ h1,h2,h3,h4,h5,h6{
     height: 8em;
     width: 8em;
   }
+  .handle-preloader .animation-preloader .custom-spinner {
+    height: 8em;
+    width: 8em;
+  }
+  .handle-preloader .animation-preloader .txt-loading .letters-loading {  
+    font-size: 30px;  
+    line-height: 40px;  
+    letter-spacing: 8px;  
+  }
 }
 @media screen and (max-width: 500px) {
   .handle-preloader .animation-preloader .spinner {
     height: 7em;
     width: 7em;
   }
-  .handle-preloader .animation-preloader .txt-loading .letters-loading {font-size: 40px; letter-spacing: 10px;}
+  .handle-preloader .animation-preloader .txt-loading .letters-loading {font-size: 30px; letter-spacing: 8px;}
 }
 
 
